updated index with social medias

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Test Engineer / Transportation Reseach Center</b></h5>
           <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right w3-margin-bottom"></i>July 2021 - <span class="w3-tag w3-red w3-round">Current</span><img class="w3-margin-left" style="max-width: 5rem" src="assets/TRC_logo.png" alt="trc"></h6>
-          <p>Working with Waymo and JLR on Autonomus Vehicel Collision Avoidance and Vehicle Handling</p>
+          <p>Working with Waymo and JLR on Autonomus Vehicle Collision Avoidance and Vehicle Handling</p>
           <hr>
         </div>
         <div class="w3-container">
@@ -118,9 +118,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-red w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-linkedin w3-hover-opacity w3-margin-right"></i>
-  <i class="fa fa-instagram w3-hover-opacity w3-margin-right"></i>
-  <i class="fa fa-twitter w3-hover-opacity w3-margin-right w3-margin-bottom"></i>
+  <a href="https://www.linkedin.com/in/jakob-madgar-b86932125/"><i class="fa fa-linkedin w3-hover-opacity w3-margin-right"></i></a>
+  <a href="https://github.com/rnadgar"><i class="fa fa-github w3-hover-opacity w3-margin-right w3-margin-bottom"></i></a>
+  <a href="https://www.instagram.com/jakobmadgar/"><i class="fa fa-instagram w3-hover-opacity w3-margin-right"></i></a>
+  <a href="https://twitter.com/jakobmadgar"><i class="fa fa-twitter w3-hover-opacity w3-margin-right w3-margin-bottom"></i></a>
 </footer>
 
 </body>
