--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- Page Container -->
 <h1 class="w3-text-grey w3-center w3-card w3-white">Jakob Madgar Resume / CV</h1>
+  <p><a href="https://jakobmadgar.com/assets/jakobmadgar_resume.pdf>Resume Download</a></p>
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
   <!-- The Grid -->
@@ -48,7 +49,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-red"></i>Skills</b></p>
           <p><i class="fa fa-check w3-margin-right w3-text-red"></i>Full Stack Rapid Prototyping</p>
-          <p><i class="fa fa-check w3-margin-right w3-text-red"></i>CAE Vehicle Design and Simulation</p>
+          <p><i class="fa fa-check w3-margin-right w3-text-red"></i><a href="https://jakobmadgar.com/assets/OSUDesignBrief_JakobSections.pdf">CAE Vehicle Design and Simulation</a></p>
           <p><i class="fa fa-check w3-margin-right w3-text-red"></i>DAQ System Integration and Testing</p>
           <p><i class="fa fa-check w3-margin-right w3-text-red"></i>Data and Mechatronics App Development</p>
           <p><i class="fa fa-check w3-margin-right w3-text-red"></i>Project / Team Management</p>
@@ -87,11 +88,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Test Engineer / Transportation Reseach Center</b></h5>
           <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right w3-margin-bottom"></i>July 2021 - <span class="w3-tag w3-red w3-round">Current</span><img class="w3-margin-left" style="max-width: 5rem" src="assets/TRC_logo.png" alt="trc"></h6>
-          <p>Working with Waymo and JLR on Autonomus Vehicle Collision Avoidance and Vehicle Handling
+          <p>Working with Waymo and JLR on Autonomous Vehicle Collision Avoidance and Vehicle Handling
             <ul>
               <li>Test design, scheduling, coordination, and execution of collision avoidance testing and limit testing</li>
               <li>Collision avoidance simulation analysis</li>
-              <li>Autonomus limit/standardized testing</li>
+              <li>Autonomous limit/standardized testing</li>
             </ul>
           </p>
           <hr>
