--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- Page Container -->
 <h1 class="w3-text-grey w3-center w3-card w3-white">Jakob Madgar Resume / CV</h1>
-  <p><a href="https://jakobmadgar.com/assets/jakobmadgar_resume.pdf>Resume Download</a></p>
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
   <!-- The Grid -->
@@ -268,6 +267,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-red w3-center w3-margin-top">
+  <p><a href="https://jakobmadgar.com/assets/jakobmadgar_resume.pdf">Resume Download</a><p>
   <p>Contact me at jakobmadgar@gmail.com</p>
   <a href="https://www.linkedin.com/in/jakob-madgar-b86932125/"><i class="fa fa-linkedin w3-hover-opacity w3-margin-right"></i></a>
   <a href="https://github.com/rnadgar"><i class="fa fa-github w3-hover-opacity w3-margin-right w3-margin-bottom"></i></a>
