--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <li>Test design, scheduling, coordination, and execution of collision avoidance testing and limit testing</li>
               <li>Collision avoidance simulation analysis</li>
               <li>Autonomous limit/standardized testing</li>
+              <li>Low Mu and Hydroplaning Characterization</li>
+              <li>Web App Tool Development for Data Analysis and Test Result Tracking</li>
+              <li>Jira, Typescript, Python, Linux, Google SDK</li>
             </ul>
           </p>
           <hr>
