Update for Promotion

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <img class = "w3-margin-left w3-margin-bottom" src="assets/webdev.png" style="max-width:3em" alt="webdev">
           <img class = "w3-margin-left w3-margin-bottom" src="assets/dewe_logo.png" style="max-width:3em" alt="dewe">
           <img class = "w3-margin-left w3-margin-bottom" src="assets/streamlit_simp_logo.svg" style="max-width:3em" alt="streamlit">
+          <img class = "w3-margin-left w3-margin-bottom" src="assets/tux.svg" style="max-width:3em" alt="linux-tux">
+          <img class = "w3-margin-left w3-margin-bottom" src="assets/gsuite-logo.webp" style="max-width:3em" alt="gsuite-logo">
           <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-laptop fa-fw w3-margin-right w3-text-red"></i>Personal Projects</b> <span class="w3-marign-left w3-small">Track on <a href="https://github.com/rnadgar">github</a></span></p>
@@ -85,15 +87,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xlarge w3-text-red"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Test Engineer / Transportation Reseach Center</b></h5>
+          <h5 class="w3-opacity"><b>Test Engineer II / Transportation Reseach Center</b></h5>
           <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right w3-margin-bottom"></i>July 2021 - <span class="w3-tag w3-red w3-round">Current</span><img class="w3-margin-left" style="max-width: 5rem" src="assets/TRC_logo.png" alt="trc"></h6>
-          <p>Working with Waymo and JLR on Autonomous Vehicle Collision Avoidance and Vehicle Handling
+          <p>Working with Waymo on Autonomous Vehicle Collision Avoidance and Vehicle Handling Analysis
             <ul>
               <li>Test design, scheduling, coordination, and execution of collision avoidance testing and limit testing</li>
-              <li>Collision avoidance simulation analysis</li>
-              <li>Autonomous limit/standardized testing</li>
+              <li>Collision avoidance metric analysis</li>
               <li>Low Mu and Hydroplaning Characterization</li>
               <li>Web App Tool Development for Data Analysis and Test Result Tracking</li>
+              <li>Various levels of vehicle control scripting design, analysis, and execution</li>
               <li>Jira, Typescript, Python, Linux, Google SDK</li>
             </ul>
           </p>
