--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <img class = "w3-margin-left w3-margin-bottom" src="assets/webdev.png" style="max-width:3em" alt="webdev">
           <img class = "w3-margin-left w3-margin-bottom" src="assets/dewe_logo.png" style="max-width:3em" alt="dewe">
           <img class = "w3-margin-left w3-margin-bottom" src="assets/streamlit_simp_logo.svg" style="max-width:3em" alt="streamlit">
-          <img class = "w3-margin-left w3-margin-bottom" src="assets/tux.svg" style="max-width:3em" alt="linux-tux">
+          <img class = "w3-margin-left w3-margin-bottom" src="assets/tux.png" style="max-width:3em" alt="linux-tux">
           <img class = "w3-margin-left w3-margin-bottom" src="assets/gsuite-logo.webp" style="max-width:3em" alt="gsuite-logo">
           <hr>
 
