--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xlarge w3-text-red"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Test Engineer II / Transportation Reseach Center</b></h5>
+          <h5 class="w3-opacity"><b>Research Engineer II / Transportation Reseach Center</b></h5>
           <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right w3-margin-bottom"></i>July 2021 - <span class="w3-tag w3-red w3-round">Current</span><img class="w3-margin-left" style="max-width: 5rem" src="assets/TRC_logo.png" alt="trc"></h6>
           <p>Working with Waymo on Autonomous Vehicle Collision Avoidance and Vehicle Handling Analysis
             <ul>
