--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <li>Low Mu and Hydroplaning Characterization</li>
               <li>Web App Tool Development for Data Analysis and Test Result Tracking</li>
               <li>Various levels of vehicle control scripting design, analysis, and execution</li>
-              <li>Jira, Typescript, Python, Linux, Google SDK</li>
+              <li>Hands-on diagnostic and validation of autonomous systems at a component level</li>
+              <li>Jira, Typescript, Python, Linux, Google SDK, Canalyzer</li>
             </ul>
           </p>
           <hr>
