Added some responsbilites

--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Research Engineer II / Transportation Reseach Center</b></h5>
           <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right w3-margin-bottom"></i>July 2021 - <span class="w3-tag w3-red w3-round">Current</span><img class="w3-margin-left" style="max-width: 5rem" src="assets/TRC_logo.png" alt="trc"></h6>
-          <p>Working with Waymo on Autonomous Vehicle Collision Avoidance and Vehicle Handling Analysis
+          <p>Working with Waymo Systems Engineering on Autonomous Vehicle DVP and Platform Development
             <ul>
+              <li>Design Verification and Planning of Platform Requirements and Testing</li>
+              <li>Body Control Scripting, Testing, and Analysis</li>
               <li>Test design, scheduling, coordination, and execution of collision avoidance testing and limit testing</li>
               <li>Collision avoidance metric analysis</li>
               <li>Low Mu and Hydroplaning Characterization</li>
@@ -111,6 +113,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - May 2021 <img class="w3-margin-left" style="max-width: 6rem" src="assets/fb_logo.png" alt="fb"></h6>
             <p>Design, Built, and Raced 4 Formula Style Vehicles.
               <ul>
+                <li>Coordianted and managed end to end vehicle architecture/attribute design and testing</li> 
                 <li>Design and Simulated full vehicle and suspension systems in Carsim and matlab/simulink</li>
                 <li>Developed tools in matlab for tire analysis, later converted tools to <a href="https://tire.jakobmadgar.com">python</a></li>
                 <li>Design and made parts for additive, composite, and billet manufacturing</li>
