--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-laptop fa-fw w3-margin-right w3-text-red"></i>Personal Projects</b> <span class="w3-marign-left w3-small">Track on <a href="https://github.com/rnadgar">github</a></span></p>
-          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>4 Wheel In-Hub Motor RC car</p>
+          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Propulsive Trailer Research</p>
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i><a href="https://tire.jakobmadgar.com">Tire Data App</a></p>
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Voron V0.1 + V2.4 Build and 3D Printing</p>
-          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Learing C++ for applications of TinyML and Sierra Chart Automated Trading</p>
+          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Learing C++ for applications in Automated Trading and Control</p>
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Personal Website</p>
-          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>ML/AI/RL Futures Trading System Research utilizing chart images and proprietary indicators</p>
+          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>ML Futures Trading System Research utilizing chart images and proprietary indicators</p>
 
         </div>
       </div><br>
@@ -95,14 +95,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right w3-margin-bottom"></i>July 2021 - <span class="w3-tag w3-red w3-round">Current</span><img class="w3-margin-left" style="max-width: 5rem" src="assets/TRC_logo.png" alt="trc"></h6>
           <p>Working with Waymo Systems Engineering on Autonomous Vehicle DVP and Platform Development
             <ul>
-              <li>Design Verification and Planning of Platform Requirements and Testing</li>
+              <li>Design Verification and Planning of Platform Requirements and Testing of Autonomous Vehicles</li>
               <li>Body Control Scripting, Testing, and Analysis</li>
+              <li>Reading and Creating Electrical Harnesses and diagrams for power and communication systems</li>
               <li>Test design, scheduling, coordination, and execution of collision avoidance testing and limit testing</li>
               <li>Collision avoidance metric analysis</li>
               <li>Low Mu and Hydroplaning Characterization</li>
               <li>Web App Tool Development for Data Analysis and Test Result Tracking</li>
               <li>Various levels of vehicle control scripting design, analysis, and execution</li>
               <li>Hands-on diagnostic and validation of autonomous systems at a component level</li>
+              <li>Autonomous Heavy Truck Testing </li>
               <li>Jira, Typescript, Python, Linux, Google SDK, Canalyzer</li>
             </ul>
           </p>
