--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-laptop fa-fw w3-margin-right w3-text-red"></i>Personal Projects</b> <span class="w3-marign-left w3-small">Track on <a href="https://github.com/rnadgar">github</a></span></p>
-          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Propulsive Trailer Research</p>
+          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i><a href="https://trailer.jakobmadgar.com">Propulsive Trailer Research</a></p>
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i><a href="https://tire.jakobmadgar.com">Tire Data App</a></p>
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Voron V0.1 + V2.4 Build and 3D Printing</p>
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Learing C++ for applications in Automated Trading and Control</p>
