--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i><a href="https://trailer.jakobmadgar.com">Propulsive Trailer Research</a></p>
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i><a href="https://tire.jakobmadgar.com">Tire Data App</a></p>
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Voron V0.1 + V2.4 Build and 3D Printing</p>
-          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Learing C++ for applications in Automated Trading and Control</p>
+          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Learing Rust for applications in Automated Trading and Control</p>
           <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>Personal Website</p>
-          <p><i class="fa fa-circle w3-margin-right w3-text-red"></i>ML Futures Trading System Research utilizing chart images and proprietary indicators</p>
 
         </div>
       </div><br>
