--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Working with Waymo Systems Engineering on Autonomous Vehicle DVP and Platform Development
             <ul>
               <li>Design Verification and Planning of Platform Requirements and Testing of Autonomous Vehicles</li>
-              <li>Body/Motion Control Scripting, Testing, and Analysis</li>
+              <li>Body/Motion Control and Test Automation Scripting, Testing, and Analysis</li>
               <li>Reading and Creating Electrical Harnesses and diagrams for power and communication systems</li>
               <li>Test design, scheduling, coordination, and execution of collision avoidance testing and limit testing</li>
+              <li>Hands-on electric vehicle testing and base vehicle ECU integrations</li>
+              <li>Cross-functional teamwork to develop integration plans and strategies for vehicle systems</li>
               <li>Collision avoidance metric analysis</li>
               <li>Low Mu and Hydroplaning Characterization</li>
               <li>Web App Tool Development for Data Analysis and Test Result Tracking</li>
