--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xlarge w3-text-red"></i>Education</h2>
         <div class="w3-container">
+          <h5 class="w3-opacity"><b>The Univeristy of Colorado Boulder</b></h5>
+          <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2024 - Present<img class="w3-margin-left" style="max-width: 10rem" src="assets/boulder_logo.png" alt="boulder"></h6>
+          <p>Masters of Science in Computer Science</p>
+          <br>
+        </div>
+        <div class="w3-container">
           <h5 class="w3-opacity"><b>The Ohio State University</b></h5>
           <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - 2021 <img class="w3-margin-left" style="max-width: 10rem" src="assets/osu_logo.png" alt="osu"></h6>
           <p>Bachelors of Science in Mechanical Engineering
