--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xlarge w3-text-red"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>The Univeristy of Colorado Boulder</b></h5>
-          <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2024 - Present<img class="w3-margin-left" style="max-width: 10rem" src="assets/boulder_logo.png" alt="boulder"></h6>
+          <h6 class="w3-text-gold"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2024 - Present<img class="w3-margin-left" style="max-width: 10rem" src="assets/boulder_logo.svg" alt="boulder"></h6>
           <p>Masters of Science in Computer Science</p>
           <br>
         </div>
