--- a/index.html
+++ b/index.html
@@ -91,22 +91,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xlarge w3-text-red"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Engineering Team Leader for Waymo Group / Transportation Reseach Center</b></h5>
+          <h5 class="w3-opacity"><b>Engineering Techincal Team Leader for Waymo Group / Transportation Reseach Center</b></h5>
           <h6 class="w3-text-red"><i class="fa fa-calendar fa-fw w3-margin-right w3-margin-bottom"></i>July 2021 - <span class="w3-tag w3-red w3-round">Current</span><img class="w3-margin-left" style="max-width: 5rem" src="assets/TRC_logo.png" alt="trc"></h6>
-          <p>Working with Waymo Systems Engineering on Automation Software and Platform Development
+          <p>Contracted to work with Waymo on Test Engineering, Test Automation, and Platform Development
             <ul>
-              <li>Design Verification and Planning of Platform Requirements and Testing of Autonomous Vehicles</li>
-              <li>Body/Motion Control and Test Automation Scripting, Testing, and Analysis</li>
-              <li>Reading and Creating Electrical Harnesses and diagrams for power and communication systems</li>
-              <li>Test design, scheduling, coordination, and execution of collision avoidance testing and limit testing</li>
-              <li>Hands-on electric vehicle testing and base vehicle ECU integrations</li>
-              <li>Cross-functional teamwork to develop integration plans and strategies for vehicle systems</li>
-              <li>Collision avoidance metric analysis</li>
-              <li>Low Mu and Hydroplaning Characterization</li>
-              <li>Web App Tool Development for Data Analysis and Test Result Tracking</li>
-              <li>Various levels of vehicle control scripting design, analysis, and execution</li>
-              <li>Hands-on diagnostic and validation of autonomous systems at a component level</li>
-              <li>Autonomous Heavy Truck Drive Cycle Design and Testing</li>
+              <li>Successfully organized and led 10+ major campaigns in various domains of autonomous vehicle test engineering and development towards major milestones and process improvement projects.</li>
+              <li>Completed hundreds of non-automated and automated analysis/assessments of vehicle dynamics, actuator level, and integration test cases in major campaigns and investigative efforts.</li>
+              <li>Developlend Trained, onboarded, and organized testing efforts and daily assignments of 10+ test engineers contributing to a variety of autonomous vehicle testing campaigns.</li>
+              <li>Other major work involves interpreting systems engineering requirements to effectively support design and execution of verifications on multiple different testing platforms; In-Vehicle, HIL, SIL.</li>
+              <li>Motion control trajectory design and scripting for vehicle and controller testing.</li>
+              <li>Safety focused test plan design, negotiation, and coordination on multiple testing facilities and surfaces.</li>
+              <li>Interpreting a variety of programming languages C++/python for debugging of autonomous systems.</li>
+              <li>Python/SQL based tool development for data analysis and campaign status tracking.</li>
+              <li>Hands-on electric vehicle testing and base vehicle ECU integrations.</li>
+              <li>Hands-on diagnostic and validation of autonomous systems at a component level.</li>
               <li>Jira, Typescript, Python, Linux, Google SDK, Canalyzer</li>
             </ul>
           </p>
